# remote-command

./: .gitignore  LICENSE  README.md  RECORD.md  mcp_mvp_spec.md  pyproject.toml
.github/: copilot-instructions.md
ansible/: config.py  inventory.py  playbook.py  runner.py  utils.py
api/: dto.py  executor.py  serializers.py  urls.py  views.py
docs/: about.md  design_record.md  h3c.md  record.md
mcp/: main.py  server.py
remote_call/: context.py  services.py  utils.py
server/: settings.py  urls.py
server/biz/: linux.py
server/config/: constants.py  templates.py
server/service/: __init__.py  dispatcher.py  linux.py  windows.py
server/utils/: errors.py  logger.py
test/: test.sh
utils/: limits.py
